# JanQServer

./: .gitignore  AGENTS.md  JanQ_actual_review.html  JanQ_strategy_regression_tests.html  README.md  automation.example.yaml  config.py  game_control.py  main_game_automation.py  press_areas.py  pyproject.toml  start_account_batch.ps1  start_account_prep.cmd  start_account_prep.ps1  start_automation.py  start_here_20250924.bat  start_janq_bot.ps1  start_register_janq_loop.ps1  修改prompt20260617.txt
JanQcore/: config.py  decision.py  game_main.py  test_fixed_game.py  test_game.py
docs/: automation_usage.md  janq_gameplay_math_report_zh.md  janq_rebuild_plan.md  janq_rules_economy.md  probe_usage.md  route_ev_strategy.md
scripts/: __init__.py  analyze_bankroll_strategy.py  build_actual_session_review.py  deploy_janq_update.ps1  janq_health_once.ps1  janq_watchdog.ps1  live_bankroll_status_once.ps1  live_status_once.ps1  monitor_bankroll_run.py  monitor_live_yakuman.py  restart_register_loop_system.ps1  run_account_batch.py  run_account_prep.py  run_janq_public_100k.py  run_janq_route_ev_100k.py  run_register_janq_loop.py  run_strategy_budget_compare.py
tests/: __init__.py  test_actual_review.py  test_analysis.py  test_automation.py  test_haipai_distribution.py  test_hand.py  test_nyukyu.py  test_probe_events.py  test_probe_normalize.py  test_probe_replay.py  test_route_ev2_strategy.py  test_route_ev_strategy.py  test_scoring_economy.py  test_shot_distribution.py  test_simulator.py  test_smoke.py  test_special_tables.py  test_strategy_review_report.py  (+1 more)
(+96 files in other folders)
