[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "janq-lab"
version = "0.1.0"
description = "Research tooling for SEGA NET Mahjong MJ JanQ strategy experiments."
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

